deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-oracle-1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-oracle-1
  template:
    metadata:
      labels:
        app: crypto-oracle-1
    spec:
      containers:
        - name: oracle
          image: keanekwa/repctf:crypto-oracle-1-v2
          ports:
            - containerPort: 1337
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-oracle-2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-oracle-2
  template:
    metadata:
      labels:
        app: crypto-oracle-2
    spec:
      containers:
        - name: oracle
          image: keanekwa/repctf:crypto-oracle-2-v2
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: crypto-oracle-1-1
spec:
  type: ClusterIP
  selector:
    app: oracle
  ports:
    - protocol: TCP
      name: crypto-oracle-1
      port: 1337
      targetPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: ClusterIP
  selector:
    app: oracle
  ports:
    - protocol: TCP
      name: crypto-oracle-2
      port: 1337
      targetPort: 1337
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repctf-ingress
spec:
  ingressClassName: nginx-example
  rules:
    - http:
      paths:
        - path: /crypto1
          pathType: Prefix
          backend:
            service:
              name: crypto-oracle-1-service
              port:
                number: 1337
        - path: /crypto2
          pathType: Prefix
          backend:
            service:
              name: crypto-oracle-2-service
              port:
                number: 1337
